syntax = "proto3";

option csharp_namespace = "Coupon.Grpc";

package coupon;

// The discount service definition.
service CouponProtoService {
	// Discount CRUD Operations
	rpc GetCoupon (GetCouponRequest) returns (CouponModel);
	rpc CreateCoupon (CreateCouponRequest) returns (CouponModel);
	rpc UpdateCoupon (UpdateCouponRequest) returns (CouponModel);
	rpc DeleteCoupon (DeleteCouponRequest) returns (DeleteCouponResponse);
}

message GetCouponRequest {
	string productName = 1;
}

message CouponModel {
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateCouponRequest {
	CouponModel coupon = 1;
}

message UpdateCouponRequest {
	CouponModel coupon = 1;
}

message DeleteCouponRequest {
	string productName = 1;
}

message DeleteCouponResponse {
	bool success = 1;
}